[package]
name = "amqp_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = "0.1.14"
tokio = { version = "1.44.1", features = ["full"] }
rusqlite = "0.30.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"