[package]
name = "amqp-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_json = "1.0"
amqprs = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.13"
url = "2.4"
once_cell = "1.8"
rand = "0.8"