[package]
name = "amqp_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_json = "1.0"
amqprs = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.15.11"
url = "2.4"
once_cell = "1.8"
rand = "0.9"
lazy_static = "1.4.0"
md5 = "0.7.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }